# TextPiper

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
tests/: test_processors.py  test_text_piper.py
text_piper/: __init__.py  constants.py  processors.py
