[metadata]
name = TextPiper
version=0.0.1
description = preprocessing text piper
long_description = file: README.md
author = Sam Yoshua
license = MIT

[options]
python_requires = >=3
packages = find:
tests_requires =
    pytest==6.2.4

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = true
